Fixing pre code whitespace

--- a/source/stylesheets/screen_overrides.css.scss
+++ b/source/stylesheets/screen_overrides.css.scss
@@ -128,6 +128,10 @@ $darkgreen: #64953f;
   white-space: nowrap;
 }
 
+.content pre code {
+  white-space: inherit;
+}
+
 /*** lookup table ***/
 
 .content table tr:last-child {
